[package]
name = "tcp-sniffer"
version = "0.1.0"
edition = "2021"

[lib]
name = "tcp"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
